# lab6

./: .pre-commit-config.yaml  README.md  lefthook.yml  main.py  pyproject.toml  requirements.txt
completions/: _fvh-manager  fvh-manager.bash  fvh-manager.fish
docs/: IntegrityStatement.txt  integrity statement.txt  pseudocode.md
scripts/: generate_completions.sh
src/: main.py  plotting.py
