[project]
name = "lab6"
version = "0.2.0"
description = "This is a CRUD compliant event booking cli for Fountain View Hall"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas",
    "plotly"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=lab6 --cov-report=term-missing --cov-report=html"
log_cli = false
log_level = "WARNING"
filterwarnings = [
    "ignore::ResourceWarning",
]

[tool.uv]
package = true

[tool.isort]
profile = "black"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "lefthook>=2.1.9",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[project.scripts]
fvh-manager = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
